k8s/nerdy-jokes-app/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    monitoring: prometheus
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/name: nerdy-jokes-app-quarkus-native
    environment: dev
  name: nerdy-jokes-app-quarkus-native
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: nerdy-jokes-app-quarkus-native
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/name: nerdy-jokes-app-quarkus-native
    environment: dev
  name: nerdy-jokes-app-quarkus-native
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: nerdy-jokes-app-quarkus-native
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/name: nerdy-jokes-app-quarkus-native
        environment: dev
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: ifqthenp/nerdy-jokes-app-quarkus-native:v1.1.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: nerdy-jokes-app-quarkus-native
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
