k8s/nerdy-jokes-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nerdy-jokes-app-quarkus-native-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/v1/joke
            backend:
              serviceName: nerdy-jokes-app-quarkus-native
              servicePort: 8080
